First try on generating variants