@@ -1,12 +1,13 @@
 package org.example;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class Decoder {
     private final Deque<Operand> operands = new ArrayDeque<>();
     private final Deque<Character> operators = new ArrayDeque<>();
     private final String expr;
+    private int maxDigits;
+    private List<Map<Character, Character>> maps = new ArrayList<>();
 
     public Decoder(String expr) {
         this.expr = expr.toLowerCase();
@@ -14,28 +15,63 @@ public class Decoder {
         parse();
     }
 
-    public String encodeOld() {
-        Map<Character, Character> map = new HashMap<>();
-        Random rnd = new Random();
-        Set<Character> numbers = operands.stream()
-                .flatMap(operand -> operand.digits.stream())
-                .collect(Collectors.toSet());
-        for (var num : numbers) {
-            map.put(num, getFreeLetter(map.keySet(), rnd));
-        }
-        for (var operand : operands) {
-            operand.digits = operand.digits.stream()
-                    .map(map::get)
-                    .collect(Collectors.toList());
+    public String decode() {
+        List<Character> symbols = operands.stream()
+                .map(operand -> operand.digits.get(operand.digits.size() - 1))
+                .distinct()
+                .toList();
+        generateCombinations(new int[symbols.size()], 0, symbols);
+        return "";
+    }
+
+    private void generateCombinations(int[] combination, int index, List<Character> symbols) {
+
+        if (index == combination.length) {
+            if (mapIsPossible(symbols, combination)) {
+                System.out.println(Arrays.toString(combination));
+            }
+            return;
         }
 
-        StringBuilder sb = new StringBuilder();
-        while (!operators.isEmpty()) {
-            sb.append(operands.pollFirst());
-            sb.append(operators.pollFirst());
-            sb.append(operands.pollFirst());
+        for (int digit = 0; digit <= 9; digit++) {
+            boolean unique = true;
+            for (int i = 0; i < index; i++) {
+                if (combination[i] == digit) {
+                    unique = false;
+                    break;
+                }
+            }
+            if (!unique) {
+                continue;
+            }
+            combination[index] = digit;
+            generateCombinations(combination, index + 1, symbols);
         }
-        return sb.toString();
+    }
+
+    private boolean mapIsPossible(List<Character> symbols, int[] values) {
+        int level = 0;
+        Deque<Operand> localOperands = new ArrayDeque<>(operands);
+        Deque<Character> localOperators = new ArrayDeque<>(operators);
+        long leftResult = 0;
+        long rightResult = 0;
+        while (!localOperators.isEmpty()) {
+            char operator = localOperators.pop();
+            if (operator == '=') {
+                Operand rightOperand = localOperands.pop();
+                char rightChar = rightOperand.digits.get(rightOperand.digits.size() - 1 - level);
+                rightResult = values[symbols.indexOf(rightChar)];
+                continue;
+            }
+            Operand rightOperand = localOperands.pop();
+            char rightChar = rightOperand.digits.get(rightOperand.digits.size() - 1 - level);
+            int rightValue = values[symbols.indexOf(rightChar)] * operator == '-' ? -1 : 1;
+            Operand leftOperand = localOperands.pop();
+            char leftChar = leftOperand.digits.get(leftOperand.digits.size() - 1 - level);
+            int leftValue = values[symbols.indexOf(leftChar)];
+            leftResult = leftResult + leftValue + rightValue;
+        }
+        return leftResult % 10 == rightResult;
     }
 
     private Character getFreeLetter(Set<Character> usedLetters, Random rnd) {
@@ -54,20 +90,24 @@ public class Decoder {
             if (c == ' ') {
                 continue;
             }
-            if (Character.isDigit(c)) {
+            if (Character.isLetter(c)) {
                 Operand operand = new Operand();
-                while (i < expr.length() && Character.isDigit(expr.charAt(i))) {
-                    operand.digits.add(c);
+                while (i < expr.length() && Character.isLetter(expr.charAt(i))) {
+                    operand.digits.add(expr.charAt(i));
                     i++;
                 }
                 i--;
-                operand.updateValue();
+                if (operand.digits.size() > maxDigits) {
+                    maxDigits = operand.digits.size();
+                }
                 operands.push(operand);
             } else {
                 operators.push(c);
             }
         }
     }
+
+
 
     private void checkExpression() {
         if (!expr.matches("[a-z]+(?:\\s*[+\\-]\\s*[a-z]+)*\\s*=\\s*[a-z]+")) {
